--- a/fenty/fentyxangular.html
+++ b/fenty/fentyxangular.html
@@ -15,7 +15,7 @@
 
 	<body id='grad'>
 		<p id="header" class="rows">
-			<img src="images/logo.png" style="max-width: 400px; margin-left: 10%;" />
+			<img src="images/logo.png" style="max-width: inherit; margin-left: 10%;" />
 			<!--
 			add shopping cart
 			-->
