--- a/fenty/fentyxangular.html
+++ b/fenty/fentyxangular.html
@@ -15,7 +15,7 @@
 
 	<body id='grad'>
 		<p id="header" class="rows">
-			<img src="images/logo.png" style="width: 50%; margin-left: 10%;" />
+			<img src="images/logo.png" style="width: 100%; height: auto; display: block; margin-left: 10%;" />
 			<!--
 			add shopping cart
 			-->
