--- a/fenty/fentyxangular.html
+++ b/fenty/fentyxangular.html
@@ -15,11 +15,11 @@
 
 	<body id='grad'>
 		<p id="header" class="rows">
-			<img src="images/logo.png" style="width: 100%; height: auto; display: block; max-width: 600px; margin-left: 10%;" />
+			<img src="images/logo.png" style="width: 100%; height: 100%; display: block; max-width: 600px; margin-left: 10%;" />
 			<!--
 			add shopping cart
 			-->
-			<img src="images/fenty_cart.png" style="width: 100%; height: auto; display: block; max-width: 80px;" />
+			<img src="images/fenty_cart.png" style="width: 100%; height: 100%; display: block; max-width: 80px;" />
 		</p>
 		<div id="display-products" ng-controller="StoreController as store">
 		<!--as is keyword
