--- a/home.html
+++ b/home.html
@@ -121,16 +121,16 @@
 			
 			<div class="main_myworks_content text-center">
 				<div class="single_work_colum col-md-4 col-sm-8 col-xs-16 wow fadeInLeft"  data-wow-duration="1.5s">
--					<div class="shrink single_work">
- -						<a href="http://patelniral.weebly.com/whats-that-food.html" target="_blank"><img src="assets/images/WTF thumbnail.jpg" alt="" /></a>
+-					<div data-toggle="tab" class="right single_work" data-target="#WTF">
+ -						<img src="assets/images/WTF thumbnail.jpg" alt="" />
 					</div>
 					<a data-toggle="tab" class="right" href="#WTF">
 						<arrow class="right-arrow"></arrow>
 					</a>
 				</div>
 				<div class="single_work_colum col-md-4 col-sm-8 col-xs-16 wow fadeInLeft"  data-wow-duration="2s">
--					<div class="shrink single_work">
- -						<a href="http://patelniral.weebly.com/fenty.html" target="_blank"><img src="assets/images/fenty thumbnail.jpg" alt="" /></a>
+-					<div class="single_work">
+ -						<img src="assets/images/fenty thumbnail.jpg" alt="" />
 					</div>
 					<a data-toggle="tab" class="right" href="#Fenty">
 						<arrow class="right-arrow"></arrow>
@@ -138,8 +138,8 @@
 				</div>
 				<div class="single_work_colum col-md-4 col-sm-8 col-xs-16 wow fadeInLeft"  data-wow-duration="3s">
 					<a data-toggle="tab" class="right" href="#Snap">
--					<div class="shrink single_work">
- -						<a  href="http://patelniral.weebly.com/snapfilters.html" target="_blank"><img src="assets/images/snapfilter thumbnail.jpg" alt="" /></a>
+-					<div class="single_work">
+ -						<img src="assets/images/snapfilter thumbnail.jpg" alt="" />
 					</div>
 						<arrow class="right-arrow"></arrow>
 					</a>
