--- a/home.html
+++ b/home.html
@@ -120,14 +120,14 @@
             </div>
 			
 			<div class="main_myworks_content text-center">
-				<div class="single_work_colum col-md-4 col-sm-8 col-xs-16 wow fadeInLeft"  data-wow-duration="1.5s">
--					<div data-toggle="tab" class="right single_work" data-target="#WTF">
- -						<img src="assets/images/WTF thumbnail.jpg" alt="" />
-					</div>
-					<a data-toggle="tab" class="right" href="#WTF">
+				<a data-toggle="tab" class="right" href="#WTF">
+					<div class="single_work_colum col-md-4 col-sm-8 col-xs-16 wow fadeInLeft"  data-wow-duration="1.5s">
+	-					<div class="single_work">
+	 -						<img src="assets/images/WTF thumbnail.jpg" alt="" />
+						</div>
 						<arrow class="right-arrow"></arrow>
-					</a>
-				</div>
+					</div>
+				</a>
 				<div class="single_work_colum col-md-4 col-sm-8 col-xs-16 wow fadeInLeft"  data-wow-duration="2s">
 -					<div class="single_work">
  -						<img src="assets/images/fenty thumbnail.jpg" alt="" />
