--- a/home.html
+++ b/home.html
@@ -123,7 +123,7 @@
 				<a data-toggle="tab" class="right" href="#WTF">
 					<div class="single_work_colum col-md-4 col-sm-8 col-xs-16 wow fadeInLeft"  data-wow-duration="1.5s">
 	-					<div class="single_work">
-	 -						<img src="assets/images/WTF thumbnail.jpg" alt="" />
+	 -						<img src="assets/images/WTF thumbnail.jpg" alt="fenty" />
 						</div>
 						<arrow class="right-arrow"></arrow>
 					</div>
@@ -131,16 +131,15 @@
 				<a data-toggle="tab" class="right" href="#Fenty">
 					<div class="single_work_colum col-md-4 col-sm-8 col-xs-16 wow fadeInLeft"  data-wow-duration="2s">
 	-					<div class="single_work">
-	 -						<img src="assets/images/fenty thumbnail.jpg" alt="" />
+	 -						<img src="assets/images/fenty thumbnail.jpg" alt="fenty" />
 						</div>
 						<arrow class="right-arrow"></arrow>
-					
 					</div>
 				</a>
 				<a data-toggle="tab" class="right" href="#Snap">
 					<div class="single_work_colum col-md-4 col-sm-8 col-xs-16 wow fadeInLeft"  data-wow-duration="3s">
 	-					<div class="single_work">
-	 -						<img src="assets/images/snapfilter thumbnail.jpg" alt="" />
+	 -						<img src="assets/images/snapfilter thumbnail.jpg" alt="snapfilter" />
 						</div>
 						<arrow class="right-arrow"></arrow>
 					</div>	
