--- a/home.html
+++ b/home.html
@@ -154,7 +154,7 @@
 					<!-- Fenty x Angular project -->
 					<div id="Fenty" class="tab-pane .fade project-display"> 
 						<div style="max-width: 40%; padding-left: 5%; display: inline-block;"><a href="https://niral-p.github.io/fenty/fentyxangular.html" target="_blank"><img src="assets/images/fentytitle.JPG" alt="app screen"></a></div>
-						<div style="display: inline-block; margin-top: 20px">Soon after Rihanna launched her new beauty line, Fenty, I began to learn AngularJS. This <a href="https://niral-p.github.io/fenty/fentyxangular.html" target="_blank">simple site</a> was born as a playground for me to practise my still-sharpening Angular skills as well as allow me to design something I had an acute interest in. <a href="http://patelniral.weebly.com/fenty.html" target="_blank">Find out more!</a></div>
+						<div style="display: inline-block; margin-top: 20%">Soon after Rihanna launched her new beauty line, Fenty, I began to learn AngularJS. This <a href="https://niral-p.github.io/fenty/fentyxangular.html" target="_blank">simple site</a> was born as a playground for me to practise my still-sharpening Angular skills as well as allow me to design something I had an acute interest in. <a href="http://patelniral.weebly.com/fenty.html" target="_blank">Find out more!</a></div>
 					</div>
 
 					<!-- Snapfilters project -->
