--- a/home.html
+++ b/home.html
@@ -148,7 +148,7 @@
 					<!-- WTF project -->
 					<div id="WTF" class="tab-pane .fade project-display">  
 						<div style="max-width: 30%; padding-left: -25%; display: inline-block;"><img src="assets/images/WTFtitle.png" alt="app screen"></div>
-						<div style="display: inline-block;">An app to take a load off your mind...at least 3 times a day! Over the course of 10 weeks, I designed and helped bring to life a mobile application focused on the individual and their tastes. <a href="http://patelniral.weebly.com/whats-that-food.html" target="_blank">Find out more!</a></div>
+						<div style="display: inline-block; margin-top: -5px;">An app to take a load off your mind...at least 3 times a day! Over the course of 10 weeks, I designed and helped bring to life a mobile application focused on the individual and their tastes. <a href="http://patelniral.weebly.com/whats-that-food.html" target="_blank">Find out more!</a></div>
 					</div>
 
 					<!-- Fenty x Angular project -->
