--- a/home.html
+++ b/home.html
@@ -148,13 +148,13 @@
 					<!-- WTF project -->
 					<div id="WTF" class="tab-pane .fade project-display">  
 						<div style="max-width: 30%; padding-left: -25%; display: inline-block;"><img src="assets/images/WTFtitle.png" alt="app screen"></div>
-						<div style="display: inline-block; margin-top: -5px;">An app to take a load off your mind...at least 3 times a day! Over the course of 10 weeks, I designed and helped bring to life a mobile application focused on the individual and their tastes. <a href="http://patelniral.weebly.com/whats-that-food.html" target="_blank">Find out more!</a></div>
+						<div style="display: inline-block;">An app to take a load off your mind...at least 3 times a day! Over the course of 10 weeks, I designed and helped bring to life a mobile application focused on the individual and their tastes. <a href="http://patelniral.weebly.com/whats-that-food.html" target="_blank">Find out more!</a></div>
 					</div>
 
 					<!-- Fenty x Angular project -->
 					<div id="Fenty" class="tab-pane .fade project-display"> 
 						<div style="max-width: 40%; padding-left: 5%; display: inline-block; overflow: hidden;"><a href="https://niral-p.github.io/fenty/fentyxangular.html" target="_blank"><img src="assets/images/fentytitle.JPG" alt="app screen"></a></div>
-						<div style="display: inline-block;">Soon after Rihanna launched her new beauty line, Fenty, I began to learn AngularJS. This <a href="https://niral-p.github.io/fenty/fentyxangular.html" target="_blank">simple site</a> was born as a playground for me to practise my still-sharpening Angular skills as well as allow me to design something I had an acute interest in. <a href="http://patelniral.weebly.com/fenty.html" target="_blank">Find out more!</a></div>
+						<div style="display: inline-block; margin-top: -5px;">Soon after Rihanna launched her new beauty line, Fenty, I began to learn AngularJS. This <a href="https://niral-p.github.io/fenty/fentyxangular.html" target="_blank">simple site</a> was born as a playground for me to practise my still-sharpening Angular skills as well as allow me to design something I had an acute interest in. <a href="http://patelniral.weebly.com/fenty.html" target="_blank">Find out more!</a></div>
 					</div>
 
 					<!-- Snapfilters project -->
