--- a/fenty/product-tabs.html
+++ b/fenty/product-tabs.html
@@ -23,7 +23,7 @@
 			</div>
 			<div ng-show="tab.isTab(2)"> 
 				<h3 style="font-family: Petit Formal Script"> 
-					Many Things 
+					My Faves
 				</h3> 
 				<blockquote></blockquote>
 			</div>
