Changes to increment functionality

--- a/fenty/product-tabs.html
+++ b/fenty/product-tabs.html
@@ -13,7 +13,7 @@
 		</ul>
 
 		<!--all possible tabs being shown -->
-		<div class="info-display" style="width: 60%; height: 300px; overflow-y: auto;" >
+		<div class="info-display" style="width: 500px; height: 300px; overflow-y: auto;" >
 			<div ng-show="tab.isTab(1)"> 
 				<h3 style="font-family: Petit Formal Script"> 	
 					 Description
