Added related content

--- a/fenty/product-tabs.html
+++ b/fenty/product-tabs.html
@@ -25,7 +25,7 @@
 				<h3 style="font-family: Petit Formal Script"> 
 					My Faves
 				</h3> 
-				<blockquote></blockquote>
+				<blockquote style="font-family: Sarabun; font-size: 25px;">{{product.related}}</blockquote>
 			</div>
 			<div ng-show="tab.isTab(3)"> 
 				<h3 style="font-family: Petit Formal Script"> Reviews: </h3> 
